fix indexes pages

--- a/Views/Insurances/Index.cshtml
+++ b/Views/Insurances/Index.cshtml
@@ -9,13 +9,13 @@
 </div>
 
 @if (User.IsInRole("Admins")) {
-    <div class="row">
-        <div class="col-md-offset-5 col-md-2">
-            <div class="row">
+    <div class="row justify-content-center">
+        <div class="col-md-3">
+            
                 <a class="btn btn-default btn-block" href="~/Insurances/Create">
                     <i class="fas fa-plus-circle"></i> Create New Insurance
                 </a>
-            </div>
+           
         </div>
     </div>
 }
