--- a/Views/Items/Create.cshtml
+++ b/Views/Items/Create.cshtml
@@ -124,7 +124,7 @@
         </div>
         
         <div class="row d-flex justify-content-between">
-            <input type="submit" value="Create" class="btn btn-primary col-9 mx-auto" />
+            <input type="submit" value="Create" id="create" class="btn btn-primary col-9 mx-auto" />
         </div>
     </div>
     
