--- a/Views/ApplicationUsers/Index.cshtml
+++ b/Views/ApplicationUsers/Index.cshtml
@@ -4,18 +4,19 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_MainLayout.cshtml";
 }
-
+<section>
 <div class="alert alert-primary">
     <h2>Users</h2>
 </div>
 
 @using (Html.BeginForm("Search", "ApplicationUsers", FormMethod.Post))
 {
-    <div class="row">
-        <div class="col-md-5 col-md-offset-1">
-            <div class="row">
+    <div class="row justify-content-center">
+		
+        <div class="col-md-5">
+            
                 <input type="text" name="searchName" class="form-control" placeholder="Search for user by user name, Email, phone number, branch name or user type ...">
-            </div>
+          
         </div>
         <div class="col-md-2">
             <button type="submit" value="Search" class="btn btn-default btn-block">
@@ -23,7 +24,7 @@
         </div>
         @if (User.IsInRole("Admins"))
         {
-            <div class="col-md-2">
+            <div class="col-md-3">
                 <a class="btn btn-default btn-block" href=@Url.Action("AddUser","Account")>
                     <i class="fas fa-plus-circle"></i> Create New User
                 </a>
@@ -149,6 +150,7 @@ else
         }
         break;
 }
+</section>
 @section scripts{
     <script>
         $(document).ready(function () {
