--- a/Views/Branches/Index.cshtml
+++ b/Views/Branches/Index.cshtml
@@ -11,31 +11,31 @@
 
 @using (Html.BeginForm("Search", "Branches", FormMethod.Post))
 {
-    <div class="row">
-        <div class="col-md-offset-1 col-md-3">
-            <div class="row">
+    <div class="row justify-content-center">
+        <div class="col-md-2">
+            
                 <input type="search" name="BranchName" class="form-control" placeholder="Branch Name">
-            </div>
-        </div>
-        <div class="col-md-3">
-            <div class="row">
-                <input type="search" name="Address" class="form-control" placeholder="Address">
-            </div>
+            
         </div>
         <div class="col-md-2">
-            <div class="row">
+           
+                <input type="search" name="Address" class="form-control" placeholder="Address">
+          
+        </div>
+        <div class="col-md-2">
+            
                 <button type="submit" value="Search" class="btn btn-default btn-block" >
 				<i class="fas fa-search"></i> Search</button>
-            </div>
+            
         </div>
         @if (User.IsInRole("Admins"))
         {
-            <div class="col-md-2">
-                <div class="row">
+            <div class="col-md-3">
+                
                     <a class="btn btn-default btn-block" href="~/Branches/Create">
                         <i class="fas fa-plus-circle"></i> Create New Branch
                     </a>
-                </div>
+               
             </div>
         }
        
