--- a/Views/Cart/MyCart.cshtml
+++ b/Views/Cart/MyCart.cshtml
@@ -65,19 +65,19 @@
     {
         sum = Convert.ToDouble(y.Price) + sum;
     }
-    <div class="row">
-        <div class="col-md-9"></div>
-        <div class="col-md-offset-5 col-md-2">
+    <div class="row justify-content-center">
+        
+        <div class="col-md-2">
             <h3 style="text-align: center">Total: @sum</h3>
         </div>
     </div>
-    <div class="row">
-        <div class="col-md-offset-5 col-md-2">
+    <div class="row justify-content-center">
+        <div class="col-md-2">
             <a class="btn btn-default btn-block" href=@Url.Action("Save", "Cart")>
                 <span class="glyphicon glyphicon-floppy-disk"></span>
                 Save
             </a>
-            <a class="btn btn-default btn-block" href=@Url.Action("BuyCart", "Cart")>Buy</a>
+            <a class="btn btn-primary btn-block" href=@Url.Action("BuyCart", "Cart")>Buy</a>
         </div>
     </div>
 }
