--- a/Views/Categories/Index.cshtml
+++ b/Views/Categories/Index.cshtml
@@ -10,13 +10,13 @@
     <h2>Categories</h2>
 </div>
 
-<div class="row">
-    <div class="col-md-offset-5 col-md-2">
-        <div class="row">
+<div class="row justify-content-center">
+    <div class="col-md-3">
+        
             <a class="btn btn-default btn-block" href="~/Categories/Create">
                 <i class="fas fa-plus-circle"></i> Create New Category
             </a>
-        </div>
+       
         </div>
     </div>
     @if (Model != null && Model.Count() > 0)
