--- a/Views/Invoices/Index.cshtml
+++ b/Views/Invoices/Index.cshtml
@@ -12,54 +12,50 @@
 
     @using (Html.BeginForm("Search", "Invoices", FormMethod.Post))
     {
-        <div class="row">
+        <div class="row justify-content-center">
             <div class="col-md-2">
-                <div class="row">
                     <input type="search" name="InvoiceId" placeholder="Invoice Number" class="form-control" />
+            </div>
+            <div class="col-md-2">
+                
+                    <input type="search" name="ClientName" placeholder="Client Name" class="form-control">
+                
+                    <input type="search" name="ClientPhoneNumber" placeholder="Client Phone" class="form-control">
+                
+            </div>
+            <div class="col-md-3">
+                <div class="form-group input-group">
+                    <span class="input-group-addon">From:</span> <input type="date" name="FromDate" placeholder="From" class="form-control " />
+                </div>
+                <div class="form-group input-group">
+                    <span class="input-group-addon">To:&nbsp;&nbsp;&nbsp;&nbsp; </span> <input type="date" name="ToDate" placeholder="To" class="form-control" />
                 </div>
             </div>
             <div class="col-md-2">
-                <div class="row">
-                    <input type="search" name="ClientName" placeholder="Client Name" class="form-control">
-                </div>
-                <div class="row">
-                    <input type="search" name="ClientPhoneNumber" placeholder="Client Phone Number" class="form-control">
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="form-group input-group">
-                    <strong class="input-group-addon">From:</strong> <input type="date" name="FromDate" placeholder="From" class="form-control " />
-                </div>
-                <div class="form-group input-group">
-                    <strong class="input-group-addon">To:&nbsp;&nbsp;&nbsp;&nbsp; </strong> <input type="date" name="ToDate" placeholder="To" class="form-control" />
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="row">
+                
                     @Html.DropDownList("InsuranceId", null, htmlAttributes: new { @class = "form-control" })
-                </div>
-                <div class="row">
+                
                     @if (User.IsInRole("Admins"))
-                {
+					{
                         @Html.DropDownList("BranchId", null, htmlAttributes: new { @class = "form-control" })
                     }
-                </div>
-            </div>
-            <div class="col-md-2">
-                <div class="row">
-                    <button type="submit" value="Search" class="btn btn-default btn-block" >
-					<i class="fas fa-search"></i> Search</button>
-                </div>
-                <div class="row">
-                    <a class="btn btn-default btn-block" href=@Url.Action("Create")>
-                        <i class="fas fa-plus-circle"></i> Create New Invoice
-                    </a>
-                </div>
+             
             </div>
         </div>
+		<div class="row justify-content-center">
+			<div class="col-md-2">
+                <button type="submit" value="Search" class="btn btn-default btn-block" >
+					<i class="fas fa-search"></i> Search</button>
+			</div>
+			<div class="col-md-3">
+				<a class="btn btn-default btn-block" href=@Url.Action("Create")>
+                        <i class="fas fa-plus-circle"></i> Create New Invoice
+                    </a>
+			</div>
+		</div>
     }
     @if (Model != null && Model.Count() > 0)
-    {
+    {	<div class="table-responsive">
             <table class="table table-hover">
                 <tr>
                     <th>
@@ -109,7 +105,7 @@
                         <td>
                             @Html.DisplayFor(modelItem => item.Date)
                         </td>
-                        <td>
+                        <td style="white-space:nowrap;">
                             <a title="Details" @@click="fetchDetails(@item.Id)" data-toggle="modal" data-target="#myModal">
                                 <i class="fas fa-file-alt fa-lg" style="color:#a72abd"></i>
                             </a>@if (User.IsInRole("Admins"))
@@ -123,6 +119,7 @@
                     </tr>
                 }
             </table>
+		</div>
     }
     else
     {
