--- a/Views/Items/Index.cshtml
+++ b/Views/Items/Index.cshtml
@@ -12,11 +12,11 @@
 
 @using (Html.BeginForm("Search", "Items", FormMethod.Post))
 {
-    <div class="row">
-        <div class="col-md-offset-1 col-md-5">
-            <div class="row">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            
                 <input type="text" name="searchName" class="form-control" placeholder="Search for item by model number, brand, color, type or gender ...">
-            </div>
+          
         </div>
         <div class="col-md-2">
             <button type="submit" value="Search" class="btn btn-default btn-block" >
@@ -24,7 +24,7 @@
         </div>
         @if (User.IsInRole("Admins"))
         {
-            <div class="col-md-2">
+            <div class="col-md-3">
                 <a class="btn btn-default btn-block" href=@Url.Action("Create","Items")>
                     <i class="fas fa-plus-circle"></i> Create New Item
                 </a>
