--- a/Views/Shared/_MainLayout.cshtml
+++ b/Views/Shared/_MainLayout.cshtml
@@ -113,7 +113,9 @@
         <!--Render Body-->
         <div class="container text-center">
             <div class="row">
+				<section>
                 @RenderBody()
+				</section>
             </div>
         </div>
     </div>
