FIX create invoice

--- a/Content/css/Styles.css
+++ b/Content/css/Styles.css
@@ -5,6 +5,15 @@ a {
   -o-transition: all 350ms ease-out;
   transition: all 350ms ease-out; }
 
+input[type="text"] {
+  padding: 10px; }
+
+input[type="number"] {
+  padding: 10px; }
+
+select {
+  padding: 10px; }
+
 .form-check .form-check-input:checked + .form-check-sign .check {
   background: #9c27b0; }
 
@@ -106,7 +115,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   background-repeat: no-repeat;
   background-size: 100% 60vh;
   height: 60vh;
-  background-image: url("../../Images/kit/bg2.jpg"); }
+  background-image: url("../../Images/kit/b1.jpg"); }
   .index-page .page-header .title {
     font-size: 50px; }
   .index-page .page-header .desc {
