--- a/Content/sass/Styles.sass
+++ b/Content/sass/Styles.sass
@@ -2,6 +2,12 @@
 
 a
     +transition(all 350ms ease-out)
+input[type="text"]
+    padding: 10px
+input[type="number"]
+    padding: 10px
+select
+    padding: 10px
 .form-check .form-check-input:checked+.form-check-sign .check 
     background: #9c27b0
 .navbar 
@@ -101,7 +107,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6
     background-repeat: no-repeat
     background-size: 100% $page-header-height
     height: $page-header-height 
-    background-image: url('../../Images/kit/bg2.jpg')
+    background-image: url('../../Images/kit/b1.jpg')
     .title
         font-size: 50px
     .desc
