--- a/Views/Shared/_Login.cshtml
+++ b/Views/Shared/_Login.cshtml
@@ -107,7 +107,7 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown nav-item pt-2">
+        <li class="dropdown nav-item">
             <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
                 <i class="fas fa-user-circle"></i>
             </a>
