--- a/Views/Shared/_MainLayout.cshtml
+++ b/Views/Shared/_MainLayout.cshtml
@@ -185,19 +185,10 @@
     <!-- Fixed Sidebar Nav - js With initialisations For Demo Purpose, Don't Include it in your project -->
     <script src="~/Content/assets-for-demo/js/material-kit-demo.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+" crossorigin="anonymous"></script>
-        <!-- VUE, AXIOS, TOASTR -->
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.5.13/dist/vue.js"></script>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+        <!-- TOASTR -->
     <script src="https://unpkg.com/vue-toastr-2/dist/vue-toastr-2.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/vue-toastr-2/dist/vue-toastr-2.min.css">
-    <script>
-        $(document).ready(function() {
-            //init DateTimePickers
-            //materialKit.initFormExtendedDatetimepickers();
-            // Sliders Init
-            //materialKit.initSliders();
-        });
-    </script>
+
     @RenderSection("scripts", required: false)
 </body>
 
