--- a/Content/css/Styles.css
+++ b/Content/css/Styles.css
@@ -14,8 +14,11 @@ input[type="text"] {
 input[type="number"] {
   padding: 10px; }
 
-select {
+input[type="password"] {
   padding: 10px; }
+
+select.form-control {
+  -webkit-appearance: menulist; }
 
 .form-check .form-check-input:checked + .form-check-sign .check {
   background: #9c27b0; }
@@ -95,6 +98,8 @@ select {
     width: 250px;
     padding: 10px;
     border-top: 1px solid #ccc; }
+  .navbar .dropdown-menu.show a svg {
+    margin-right: 15px; }
 
 .alert {
   padding: 10px;
@@ -166,3 +171,9 @@ section {
     transition: all 350ms ease-out;
     font-family: 'FontAwesome';
     padding-right: 10px; }
+
+.modal-backdrop {
+  z-index: unset; }
+
+.modal-content.panel.panel-primary {
+  top: 20px; }
