--- a/Views/Invoices/Index.cshtml
+++ b/Views/Invoices/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_MainLayout.cshtml";
 }
 <div id="app">
-    
+    <div class="d-print-none">
     <div class="alert alert-primary">
         <h2>Invoices</h2>
     </div>
@@ -180,18 +180,21 @@
         </script>
     }
 
-
+</div>
     <!--------------- Modal ---------------->
-    <div class="modal fade" id="invoiceDetailsModal" tabindex="-1" role="dialog" aria-labelledby="invoiceDetailsModalLabel">
+	
+    <div class="modal fade d-print-block" id="invoiceDetailsModal" tabindex="-1" role="dialog" aria-labelledby="invoiceDetailsModalLabel">
         <div class="modal-dialog" role="document">
             <div class="modal-content panel panel-primary">
                 <div class="modal-header panel-heading">
-                    <h3 class="modal-title w-100" id="invoiceDetailsModalLabel">Invoice Details</h3>                    
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<img src="~/Images/logo-black.png" style="height:50px" alt="">
+                    <h3 class="modal-title w-100" id="invoiceDetailsModalLabel">Invoice Details</h3>   
+                    <button type="button" class="close d-print-none" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body">
+				<div class="d-none d-print-block">Print Only (Hide on screen only)</div>
                     <!---- MODAL BODY ------>
                     <h1 v-show="loading"><i class="fas fa-spinner fa-spin"></i></h1>
                     <div v-show="!loading">
@@ -250,13 +253,13 @@
                     </div>
                 </div><!-------- END: MODAL BODY ------------>
                 <div class="modal-footer justify-content-between">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button Class="btn btn-warning" onclick="myFunction()">Print this page</button>
+                    <button type="button" class="btn btn-default d-print-none" data-dismiss="modal">Close</button>
+                    <button Class="btn btn-warning d-print-none" onclick="myFunction()">Print this page</button>
                 </div>
             </div>
         </div>
     </div>
-</div>     
+
 <!--------------------------END: MODAL------------------------------>
      
 @*<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>*@
